--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "docs:build": "vuepress build docs",
-    "docs:clean-dev": "vuepress dev docs --clean-cache",
-    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build source",
+    "docs:clean-dev": "vuepress dev source --clean-cache",
+    "docs:dev": "vuepress dev source",
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
